# Reflex

./: README.md  codecov.yml  pyproject.toml
.github/workflows/: ci-release.yml  ci.yml  publish.yml  test_and_lint.yml
reflex/: config.py  core.py  errors.py  stubgen.py
reflexsive/: __init__.py
src/reflexsive/: __init__.py  cli.py  stubgen.py
src/reflexsive/cli/: __init__.py  _split_qual_name.py  commands.py  helpers.py  info.py  statics.py
tests/: test_config.py  test_core.py  test_stubgen.py
tests/test_project/: README.txt  a.py  b.py  c.py  d.py  e.py
tests/test_project/sub_dir/: f.py  g.py
