[project]
name = "reflex"
version = "0.0.1"
description = "Method aliasing system with argument remapping and optional stub generation"
authors = [
    { name = "Dylan Raiff" }
]
requires-python = ">=3.9,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/d-raiff/Reflex"
Repository = "https://github.com/d-raiff/Reflex"
Issues = "https://github.com/d-raiff/Reflex/issues"

[tool.setuptools]
packages = ["reflex"]
# Or: packages = { find = {} }

[tool.setuptools.package-data]
"reflex" = ["*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# -------------------------------
# ✅ Pytest configuration
# -------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --tb=short --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["reflex"]

[tool.coverage.report]
show_missing = true
skip_covered = true

# -------------------------------
# ✅ Mypy configuration
# -------------------------------
[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
pretty = true
namespace_packages = true
explicit_package_bases = true